[package]
name = "tilt-recorder"
version = "0.1.0"
authors = ["brett"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.9"
influxdb = { version = "0.5", features = ["derive"] }
tokio = { version = "1.17", features = ["macros", "rt", "rt-multi-thread"] }
chrono = "0.4"
futures = "0.3"
