[package]
name = "tilt-recorder"
version = "0.1.0"
authors = ["brett"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11.7"
influxdb = { version = "0.7.2", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt", "rt-multi-thread"] }
chrono = "0.4.39"
futures = "0.3.31"
